--- a/tox.ini
+++ b/tox.ini
@@ -1,9 +1,9 @@
 [tox]
-envlist = py27, py33, py34
+envlist = py27, py33, py34, py35
 
 [testenv]
 setenv =
-    PYTHONPATH = {toxinidir}:{toxinidir}/flask-musers
-commands = py.test
+    PYTHONPATH = {toxinidir}
+commands = py.test {posargs}
 deps =
     -r{toxinidir}/requirements-dev.txt
